--- a/package.json
+++ b/package.json
@@ -56,5 +56,11 @@
   },
     "devDependencies": {
     "gh-pages": "^4.0.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Blooife/rpi_laba2.git"
   }
 }
