--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Blooife/rpi_laba2.git"
+    "url": "git+https://github.com/grizzlybearing/hyina.git"
   }
 }
