--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2lab",
+  "name": "hyina",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://grizzlybearing.github.io/hyina/",
