--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
+    
   },
   "eslintConfig": {
     "extends": [
